ingress-prometheus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
spec:
  backend:
    serviceName: prometheus
    servicePort: 9090
